# Shinyaic

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  whichOneIsMoreDeliciousCHOCOROOMSorCHOCOCONES.ts
examples/simple/: index.html
learning/css/: border.md
src/: main.rs
src/css/cssom/: cssom.rs  declarations.rs  mod.rs  selector.rs
src/css/parser/: parser.rs
src/html/: mod.rs
src/html/dom/: dom.rs
src/html/dom/elements/: elements.rs
src/html/parser/: parser.rs
src/paint/: border.rs  canvas.rs  default.css  font.rs  mod.rs  paint.rs  window.rs  window_canvas.rs
src/paint/styling_handler/: handle_background.rs
src/paint/util/: load_default_css.rs
src/parser/: parser.rs
src/render_tree/: mod.rs  pt.rs  rectangle.rs  render_object.rs  render_tree.rs
