[package]
name = "Shinyaic"
version = "0.1.0"
authors = ["shinyaigeek <PhilisPaxil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
iced_native = "0.3"
iced_graphics = "0.1"
konnnyaku-client = { path = "./konnnyaku/packages/konnnyaku-client" }