[package]
name = "shinyaic"
version = "0.1.0"
authors = ["shinyaigeek <PhilisPaxil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-text = "19.2.0"
font-kit = "0.10.1"
iced = "0.3"
iced_native = "0.4"
iced_graphics = "0.2"
konnnyaku-client = { path = "./konnnyaku/packages/konnnyaku-client" }